[gd_scene load_steps=15 format=3 uid="uid://dihqcv263fr6d"]

[ext_resource type="Script" path="res://powerup/powerup.gd" id="1_tqflg"]
[ext_resource type="Texture2D" uid="uid://dkdkib1ixmbcw" path="res://assets/pow/pow-frame-1.png" id="2_kq8wh"]
[ext_resource type="Texture2D" uid="uid://bxl7s56cpogf7" path="res://assets/pow/pow-frame-2.png" id="3_wb15l"]
[ext_resource type="Texture2D" uid="uid://du732jfbnwoeu" path="res://assets/pow/pow-frame-3.png" id="4_vswju"]
[ext_resource type="Texture2D" uid="uid://djde1v5tju5l6" path="res://assets/pow/pow-frame-4.png" id="5_xgieg"]
[ext_resource type="Texture2D" uid="uid://dik628euk6uu8" path="res://assets/pow/pow-frame-5.png" id="6_vwdfh"]
[ext_resource type="Texture2D" uid="uid://cofe05lcpo1go" path="res://assets/pow/pow-frame-6.png" id="7_fhx7u"]
[ext_resource type="Texture2D" uid="uid://c01gwgkt61okx" path="res://assets/pow/pow-frame-7.png" id="8_d4bos"]
[ext_resource type="Texture2D" uid="uid://bda552cyk5ug4" path="res://assets/pow/pow-frame-8.png" id="9_h6sy6"]
[ext_resource type="Texture2D" uid="uid://effqrd4cbw7y" path="res://assets/pow/pow-frame-9.png" id="10_13ojj"]
[ext_resource type="Texture2D" uid="uid://dbm87g2uqxip5" path="res://assets/pow/pow-frame-10.png" id="11_thoy2"]
[ext_resource type="AudioStream" uid="uid://cih3kw1tkf6s8" path="res://assets/audio/Coin.wav" id="13_3q3tt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vpmxl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kq8wh")
}, {
"duration": 1.0,
"texture": ExtResource("3_wb15l")
}, {
"duration": 1.0,
"texture": ExtResource("4_vswju")
}, {
"duration": 1.0,
"texture": ExtResource("5_xgieg")
}, {
"duration": 1.0,
"texture": ExtResource("6_vwdfh")
}, {
"duration": 1.0,
"texture": ExtResource("7_fhx7u")
}, {
"duration": 1.0,
"texture": ExtResource("8_d4bos")
}, {
"duration": 1.0,
"texture": ExtResource("9_h6sy6")
}, {
"duration": 1.0,
"texture": ExtResource("10_13ojj")
}, {
"duration": 1.0,
"texture": ExtResource("11_thoy2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cj0d2"]
size = Vector2(53, 56)

[node name="powerup" type="Area2D" groups=["powerups"]]
script = ExtResource("1_tqflg")

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_vpmxl")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_cj0d2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_3q3tt")

[node name="InicioTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_powerup_area_entered"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_inicio_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
